improve a lot stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,4 @@ project(vita-kbl-loader)
 add_subdirectory(payload_scratchpad)
 add_subdirectory(payload_boot)
 add_subdirectory(loader)
+add_subdirectory(second-enso-for-kbl-loader)
